[B]1.0.4:[/B]
- načítání pohádek teď odpovídá webu, lze procházet podle písmen
[B]1.0.3:[/B]
- opraveno dle nového vzhledu stránek, načítání seznamu pohádek je ovšem
pomalejší
[B]1.0.2:[/B]
- přidaná možnost volby kvality videa, default: nejlepší 
[B]1.0.1:[/B]
- přidaná podpora přehrávání a stahování pohádek rozdělených na více videí
[B]1.0.0:[/B]
Initial version