@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.pohadkar.cz"
-       name="pohadkar.cz"
-       version="1.0.4"
+       name="Pohádkář.cz"
+       version="1.1.0"
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="2.0" />
-    <import addon="script.module.stream.resolver" version="1.5.6" />
+    <import addon="script.module.stream.resolver" version="1.5.7" />
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
