@@ -3,21 +3,6 @@
 	<string id="30000">Počet zapamatovaných hledání</string>
 	<string id="30001">Video není dostupné, zkontrolujte,[CR]zda funguje přehrávání na webu.</string>
 	<string id="30012">[B]Další[/B]</string>
-	<string id="30030">Složka pro stahování</string>
-	<string id="30031">Nastavte prosím složku pro stahování</string>
-	<string id="30032">Zobrazovat stav stahování</string>
-	<string id="30033"> - zobrazit stav každých</string>
-	<string id="30034">10%</string>
-	<string id="30035">5%</string>
-	<string id="30036">1%</string>
-	<string id="30037">[B]Stažené soubory[/B]</string>
-
-	<string id="30050">Kvalita videa</string>
-	<string id="30051">Zeptat se</string>
-	<string id="30052">Nejlepší</string>
-	<string id="30053">Nejhorší</string>
-	<string id="30054">720p</string>
-	<string id="30055">480p</string>
-	<string id="30056">360p</string>
+	<string id="30050">* Přehrát všechno *</string>
 	<string id="31000">Data o použití jsou zaslána v okamžiku, kdy spustíte přehrávání nebo stahování videa doplňkem. Není odesílána informace o tom, co přehráváte.</string>
 </strings>
