@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings>
 	<setting label="30000" type="text" id="keep-searches" default="20" />
-	<setting label="30050" id="quality" type="enum" lvalues="30051|30052|30053|30054|30055|30056" default="1" />
-	<setting label="30030" id="downloads" type="folder" default="" />
-	<setting label="30032" id="download-notify" type="bool" default="true" />
-	<setting label="30033" id="download-notify-every" type="enum" lvalues="30034|30035|30036" default="0" visible="eq(-1,true)" />
 </settings>
